--- a/estructura de archivos/public/css/styles.css
+++ b/estructura de archivos/public/css/styles.css
@@ -1,12 +1,13 @@
-@import './general.css';
-@import'./index.css';
-@import'./productDetail.css';
-@import'./cart.css';
-@import'./login.css';
-@import'./register.css';
-@import'./footer.css';
-@import'./header.css';
-@import'./aboutUs.css';
-@import'./favourites.css';
-@import'./userProfile.css';
-@import'./shopping.css';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import'/css/general.css';
+@import'/css/index.css';
+@import'/css/productDetail.css';
+@import'/css/cart.css';
+@import'/css/login.css';
+@import'/css/register.css';
+@import'/css/footer.css';
+@import'/css/header.css';
+@import'/css/aboutUs.css';
+@import'/css/favourites.css';
+@import'/css/userProfile.css';
+@import'/css/shopping.css';
