--- a/estructura de archivos/public/css/index.css
+++ b/estructura de archivos/public/css/index.css
@@ -6,56 +6,16 @@ body {
 
 /*  H E A D E R */
 
-#top {
-    padding: 5px;
-    background-color: #212529;
-    border-bottom: solid 1px #2b2d32;
-}
-
-.header h1,
-h1 {
-    text-align: center;
-    margin: 0;
-    width: 105%
-}
-
-.header__top--general {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    font-size: 20px;
-    color: #dee2e6;
-}
-
-.header__top--general a img {
-    width: 40%;
-    height: 40%;
-}
-
-#burger {
-    border: none;
-    background-color: transparent;
-    align-items: center;
-    width: 20%;
-    color: #dee2e6;
-}
-
-.header__top--general-navigation_button {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-}
-
-.header__top--general-navigation_button button {
-    border: none;
-    background-color: transparent;
-    align-items: center;
-    color: #dee2e6;
+.header--figure-logo {
+    margin: 0 0 0;
 }
 
 
 /* M A I N */
+
+#mid {
+    padding-top: 62px;
+}
 
 .main h2,
 h2 {
@@ -123,8 +83,12 @@ h2 {
 .main__section--product-content_offers {
     background-color: #3d47a0;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     padding-left: 10px;
+}
+
+.main-section-price-ofert {
+    display: flex;
 }
 
 .main__section--product-content {
@@ -151,7 +115,6 @@ h2 {
     font-size: 11px;
     color: #b0b2b7;
     padding-left: 5px;
-    padding-top: 5px;
     width: 54%
 }
 
@@ -167,14 +130,64 @@ h2 {
     padding-top: 1px;
 }
 
-.main__section--display_button {
+.main-content-buttom {
+    display: flex;
+    justify-content: center;
+}
+
+.main-display-button {
     margin-bottom: 10px;
-    border-radius: 5px;
-    border: none;
     color: #dee2e6;
     background-color: #606164;
     border: solid 1px #2b2d32;
+    border-radius: 5px;
+    border: none;
+    text-align: center;
+}
+
+.carousel-inner p,
+h5 {
+    color: black;
 }
 
 
 /*  F O O T E R */
+
+@media (min-width: 375px) {
+    .main__section--product-favorite i {
+        top: -240px;
+        left: 135px;
+    }
+}
+
+@media (min-width: 425px) {
+    .main__section--product-favorite i {
+        top: -274px;
+        left: 157px;
+    }
+}
+
+@media (min-width: 768px) {
+    /* HEADER */
+    /* FOOTER */
+    /* MAIN */
+    .main__section--product {
+        width: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .main__section--product-favorite i {
+        top: -242px;
+        left: 138px;
+        display: block;
+    }
+}
+
+@media (min-width: 1024px) {
+    .main__section--product-favorite i {
+        top: -336px;
+        left: 200px;
+    }
+}
+
+@media (min-width: 1440px) {}
