--- a/estructura de archivos/views/index.html
+++ b/estructura de archivos/views/index.html
@@ -5,16 +5,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DALF-Store</title>
-    <script src="https://kit.fontawesome.com/ae7c764a16.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="/css/index.css" rel="stylesheet" />
+    <link href="/css/header.css" rel="stylesheet">
 </head>
 
-<body class="">
+<body>
     <header id="top">
         <div class="header__top--general">
             <button id="burger"><i class="fa-solid fa-bars"></i></button>
-            <h1>DALF-Store</h1>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Juegos</a></li>
+                    <li><a href="#">Tarjetas de Regalo</a></li>
+                    <li><a href="#">Xbox</a></li>
+                    <li><a href="#">Software</a></li>
+                    <li><a href="#">Español Latinoamericano | ARS</a></li>
+                </ul>
+            </nav>
+            <figure class="header--figure-logo"><img src="/images/logo2.png" alt=""></figure>
             <div class="header__top--general-navigation_button">
                 <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 <button><i class="fa-solid fa-cart-shopping"></i></button>
@@ -55,10 +65,14 @@
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
                 <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content_offers">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
-                    <p class="main__section--product-price">$ 9999</p>
-                    <p class="main__section--product-discount">5% OFF</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
+                    <div class="main-section-price-ofert">
+                        <p class="main__section--product-price">$ 9999</p>
+                        <p class="main__section--product-discount">5% OFF</p>
+                    </div>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
@@ -66,10 +80,14 @@
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
                 <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content_offers">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
-                    <p class="main__section--product-price">$ 9999</p>
-                    <p class="main__section--product-discount">5% OFF</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
+                    <div class="main-section-price-ofert">
+                        <p class="main__section--product-price">$ 9999</p>
+                        <p class="main__section--product-discount">5% OFF</p>
+                    </div>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
@@ -77,10 +95,14 @@
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
                 <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content_offers">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
-                    <p class="main__section--product-price">$ 9999</p>
-                    <p class="main__section--product-discount">5% OFF</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
+                    <div class="main-section-price-ofert">
+                        <p class="main__section--product-price">$ 9999</p>
+                        <p class="main__section--product-discount">5% OFF</p>
+                    </div>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
@@ -88,15 +110,19 @@
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
                 <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content_offers">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
-                    <p class="main__section--product-price">$ 9999</p>
-                    <p class="main__section--product-discount">5% OFF</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
+                    <div class="main-section-price-ofert">
+                        <p class="main__section--product-price">$ 9999</p>
+                        <p class="main__section--product-discount">5% OFF</p>
+                    </div>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
-            <button class="main__section--display_button">Ver más</button>
         </section>
+        <div class="main-content-buttom"><button class="main-display-button">Ver más</button></div>
         <div id="carouselExampleCaptions" class="carousel slide pointer-event" data-bs-ride="true">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -107,21 +133,21 @@
                 <div class="carousel-item active">
                     <img src="/images/diseno-diseno-banner-fondo-ancho-azul-geometrico-abstracto_1017-23062.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
+                        <h5>Cliente+</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="/images/diseno-diseno-banner-fondo-ancho-azul-geometrico-abstracto_1017-23062.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
+                        <h5>Beneficios</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/diseno-diseno-banner-fondo-ancho-azul-geometrico-abstracto_1017-23062.webp" class="d-block w-100" alt="...">
+                    <img src="/images/Merchandising.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
+                        <h5>Merchandising</h5>
                         <p>Some representative placeholder content for the third slide.</p>
                     </div>
                 </div>
@@ -139,98 +165,105 @@
         <section class="main__section--product">
             <article class="main__section--product-article">
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
-                <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
                     <p class="main__section--product-price">$ 9999</p>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
             <article class="main__section--product-article">
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
-                <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
                     <p class="main__section--product-price">$ 9999</p>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
             <article class="main__section--product-article">
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
-                <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
                     <p class="main__section--product-price">$ 9999</p>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
             <article class="main__section--product-article">
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
-                <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
                     <p class="main__section--product-price">$ 9999</p>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
-            <button class="main__section--display_button">Ver más</button>
         </section>
+        <div class="main-content-buttom"><button class="main-display-button">Ver más</button></div>
         <h2>Producto de nuestros usuarios</h2>
         <section class="main__section--product">
             <article class="main__section--product-article">
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
-                <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
                     <p class="main__section--product-price">$ 9999</p>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
             <article class="main__section--product-article">
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
-                <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
                     <p class="main__section--product-price">$ 9999</p>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
             <article class="main__section--product-article">
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
-                <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
                     <p class="main__section--product-price">$ 9999</p>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
             <article class="main__section--product-article">
                 <img src="/images/xbox-key.jpeg" alt="xbox-key">
-                <div class="main__section--product-favorite"><i class="fa-regular fa-heart"></i></div>
                 <div class="main__section--product-content">
-                    <p class="main__section--product-region">GLOBAL</p>
-                    <p class="main__section--product-ubication">Desde</p>
+                    <div class="main-section-global-region">
+                        <p class="main__section--product-region">GLOBAL</p>
+                        <p class="main__section--product-ubication">Desde</p>
+                    </div>
                     <p class="main__section--product-price">$ 9999</p>
                     <p class="main__section--product-description">Xbox Microsoft Key</p>
                 </div>
             </article>
-            <button class="main__section--display_button">Ver más</button>
         </section>
+        <div class="main-content-buttom"><button class="main-display-button">Ver más</button></div>
         <h2>Categorías</h2>
     </main>
     <footer>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous">
-    </script>
+    <script src="https://kit.fontawesome.com/ae7c764a16.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 
 </html>
