--- a/estructura de archivos/public/css/index.css
+++ b/estructura de archivos/public/css/index.css
@@ -29,6 +29,10 @@ h2 {
     color: #dee2e6;
 }
 
+.main--img-banner {
+    height: 20vh;
+}
+
 #carouselExampleIndicators {
     margin-bottom: 10px;
 }
@@ -124,7 +128,7 @@ h2 {
 }
 
 .main__section--product-discount {
-    font-size: 12px;
+    font-size: 13px;
     color: #27a95d;
     padding-left: 5px;
     padding-top: 1px;
@@ -143,33 +147,51 @@ h2 {
     border-radius: 5px;
     border: none;
     text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 17px;
 }
 
-.carousel-inner p,
-h5 {
-    color: black;
+.main-article-carousel {}
+
+.main-carousel-button {
+    background-color: #2b2d32;
+    border: solid 1px #000000;
+    border-radius: 50%;
 }
 
 
 /*  F O O T E R */
 
-@media (min-width: 375px) {
+@media (min-width: 375px)
+/* Mobile */
+
+{
     .main__section--product-favorite {
         top: 13px;
         left: 144px;
     }
 }
 
-@media (min-width: 425px) {
+@media (min-width: 425px)
+/* Mobile */
+
+{
     .main__section--product-favorite {
         top: 13px;
         left: 170px;
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px)
+/* Tablet*/
+
+{
     /* HEADER */
     /* MAIN */
+    .main--img-banner {
+        height: 30vh;
+    }
     .main__section--product {
         width: 100%;
         display: flex;
@@ -180,14 +202,54 @@ h5 {
         left: 150px;
         display: block;
     }
-}
-
-@media (min-width: 1024px) {
-    /* MAIN */
-    .main__section--product-favorite {
-        top: 13px;
-        left: 212px;
+    .main__section--product-description {
+        display: block;
+        font-size: 15px;
+        padding-left: 5px;
     }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1024px)
+/* Desktop */
+
+{
+    /* MAIN */
+    .main--img-banner {
+        height: 45vh;
+    }
+    .main__section--product-favorite {
+        top: 15px;
+        left: 213px;
+    }
+}
+
+@media (min-width: 1185px) {
+    .main__section--product-favorite {
+        left: 289px;
+    }
+}
+
+@media (min-width: 1440px)
+/* Desktop */
+
+{
+    .main--img-banner {
+        height: 45vh;
+    }
+    .main__section--product-article {
+        width: 20%;
+    }
+    .main__section--product-favorite {
+        top: 19px;
+        left: 238px;
+    }
+}
+
+@media (min-width: 1680px) {
+    .main--img-banner {
+        height: 55vh;
+    }
+    .main__section--product-favorite {
+        left: 283px;
+    }
+}
