body & header fixed

--- a/estructura de archivos/views/productDetail.html
+++ b/estructura de archivos/views/productDetail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,33 +9,38 @@
     <script src="https://kit.fontawesome.com/b37740f339.js" crossorigin="anonymous"></script>
     <title>DALF | DETALLE</title>
 </head>
+
 <body>
     <main class="productdetail__main">
         <section class="detail__purchase">
-           <article class="detail__purchase__product">
-            <h1 class="detail__purchase__product--title">Producto</h1>
-            <p class="detail__purchase__product--price">$precio</p>
-            <p class="detail__purchase__product--discount">10% OFF</p>
-            <p class="detail__purchase__product--rebajas">En 12 cuotas sin interes</p>
-           </article >
-           <div>
-            <input type="text" class="stock-input" placeholder=" Stock disponible: 99">
-            <button class="contador-resta">-</button>
-                    <button class="contador-valor">1</button>
-                    <button class="contador-suma">+</button>
-            </div>         
+            <article class="detail__purchase__product">
+                <h1 class="detail__purchase__product--title">Producto</h1>
+                <div class="detail__purchase__product--box">
+                    <p class="detail__purchase__product--price">$precio</p>
+                    <p class="detail__purchase__product--discount">10% OFF</p>
+                </div>
+                <div>
+                    <p class="detail__purchase__product--rebajas">En 12 cuotas sin interes</p>
+                </div>
+            </article>
+            <div>
+                <input type="text" class="stock-input" placeholder=" Stock disponible: 99">
+                <button class="contador-resta">-</button>
+                <button class="contador-valor">1</button>
+                <button class="contador-suma">+</button>
+            </div>
             <p class="detail__product__envio">Envio: Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-           <article class="detail__purchase__buttons">
-            <div class="detail__purchase__buttons--cart">
-            <button type="submit" name="cart"><i class="fa-solid fa-cart-shopping"></i>   Agregar al carrito</button>
-            </div>
-            <div class="detail__purchase__buttons--fav">
-            <button  type="submit" name="favorites"><i class="fa-solid fa-heart"></i>   Agregar a favoritos</button>
-            
-            </div>
-           </article>
+            <article class="detail__purchase__buttons">
+                <div class="detail__purchase__buttons--cart">
+                    <button type="submit" name="cart"><i class="fa-solid fa-cart-shopping"></i>   Agregar al carrito</button>
+                </div>
+                <div class="detail__purchase__buttons--fav">
+                    <button type="submit" name="favorites"><i class="fa-solid fa-heart"></i>   Agregar a favoritos</button>
+
+                </div>
+            </article>
         </section>
-        <section class="detail__product__images"> 
+        <section class="detail__product__images">
             <img src="/images/Silla gamer 1.webp" alt="Producto">
             <img src="/images/Silla gamer 1.webp" alt="foto1">
             <img src="/images/Silla gamer 1.webp" alt="foto2">
@@ -54,7 +60,8 @@
         </section>
         <section class="detail__product__store">
             <h2>Descripción</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse culpa eum architecto, sint deserunt labore aperiam consectetur corrupti cupiditate voluptate veniam doloremque temporibus eaque id, eos inventore, fugiat obcaecati odit tempore. Earum optio doloremque nihil iusto ratione totam praesentium vel numquam sed perferendis culpa reprehenderit velit repudiandae, iste necessitatibus asperiores.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse culpa eum architecto, sint deserunt labore aperiam consectetur corrupti cupiditate voluptate veniam doloremque temporibus eaque id, eos inventore, fugiat obcaecati odit tempore.
+                Earum optio doloremque nihil iusto ratione totam praesentium vel numquam sed perferendis culpa reprehenderit velit repudiandae, iste necessitatibus asperiores.</p>
         </section>
         <section class="detail__product__ratings">
 
@@ -62,20 +69,20 @@
         <section class="detail__product__questions">
             <h2>Preguntas Frecuentes</h2>
             <article>
-            <ul>
-                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
-                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
-                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
-                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
-            </ul>
+                <ul>
+                    <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
+                    <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
+                    <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
+                    <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
+                </ul>
             </article>
             <article>
-            <ul>
-                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
-                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
-                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
-                <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
-            </ul>
+                <ul>
+                    <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
+                    <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
+                    <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
+                    <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
+                </ul>
             </article>
         </section>
         <section class="detail__product__otherproducts">
@@ -92,28 +99,29 @@
     </main>
     <footer>
         <div class="footer--logo">
-        <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
+            <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
         </div>
-       <section class="footer__formas-de-pago">
+        <section class="footer__formas-de-pago">
             <a href="https://www.visa.com.ar"><img src="/images/Visa.png" alt="Visa"></a>
-            <a href="https://www.mastercard.com.ar/es-ar.html"><img src="/images/Mastercard.png" alt="Mastercard"></a>            
+            <a href="https://www.mastercard.com.ar/es-ar.html"><img src="/images/Mastercard.png" alt="Mastercard"></a>
             <a href="https://www.americanexpress.com/es-ar/"><img src="/images/American express.png" alt="American Express"></a>
-            <a href="https://www.naranjax.com"><img src="/images/Naranja.png" alt="Naranja"></a>     
+            <a href="https://www.naranjax.com"><img src="/images/Naranja.png" alt="Naranja"></a>
             <a href="https://www.mercadopago.com.ar/home"><img src="/images/mercadopago.jpg" alt="Mercadopago"></a>
-            <a href="https://www.nativanacion.com.ar"><img src="/images/Nativa.jpg" alt="Nativa"></a>   
-            <a href="https://www.redlink.com.ar"><img src="/images/Red Link.png" alt="Red Link"></a>  
+            <a href="https://www.nativanacion.com.ar"><img src="/images/Nativa.jpg" alt="Nativa"></a>
+            <a href="https://www.redlink.com.ar"><img src="/images/Red Link.png" alt="Red Link"></a>
         </section>
         <section class="footer__lastsection">
             <nav class="footer__lastsection__navbar">
-            <ul>
-                <li>Sobre nosotros</li>
-                <li>Contactanos</li>
-                <li>Politicas de privacidad</li>
-                <li>Ayuda</li>
-            </ul>
+                <ul>
+                    <li>Sobre nosotros</li>
+                    <li>Contactanos</li>
+                    <li>Politicas de privacidad</li>
+                    <li>Ayuda</li>
+                </ul>
             </nav>
             <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
         </section>
     </footer>
 </body>
+
 </html>
