--- a/estructura de archivos/public/css/footer.css
+++ b/estructura de archivos/public/css/footer.css
@@ -1,16 +1,17 @@
-footer{
+footer {
     display: flex;
     box-sizing: border-box;
     flex-direction: column;
     background-color: #212529;
+    margin-top: 15px;
 }
 
-.footer--logo{
+.footer--logo {
     margin: 20px 0px;
     text-align: center;
 }
 
-.footer--logo img{
+.footer--logo img {
     width: 60%;
 }
 
@@ -20,8 +21,9 @@ footer{
 }
 
 .footer__formas-de-pago img {
-    height: 57px;
-    width: 84px;
+    height: 60px;
+    width: 80px;
+    padding: 2px;
 }
 
 .footer__lastsection {
@@ -34,50 +36,43 @@ footer{
 }
 
 .footer__lastsection__navbar {
-    color: var( --C_Ice-Cream);
-    
+    color: #dee2e6;
 }
 
-.footer__lastsection__copyright{
+.footer__lastsection__copyright {
     text-align: center;
-    color: var( --C_Ice-Cream);
+    color: #dee2e6;
 }
 
-@media (min-width : 768px) {
-
-    .footer--logo img{
+@media (min-width: 768px) {
+    .footer--logo img {
         width: 40%;
     }
-
     .footer__formas-de-pago img {
         height: 57px;
         width: 90px;
     }
-
     .footer__lastsection__navbar {
-        color: var( --C_Ice-Cream);
+        color: #dee2e6;
         display: flex;
         justify-content: center;
+        padding: 10px 0px 0px;
     }
-    .footer__lastsection__navbar ul li{
+    .footer__lastsection__navbar ul li {
         display: inline-block;
         justify-content: space-between;
         padding: 0px 10px;
     }
 }
 
-@media (min-width : 1024px){
-
-    .footer--logo img{
+@media (min-width: 1024px) {
+    .footer--logo img {
         width: 30%;
     }
-
     .footer__formas-de-pago img {
         height: 64px;
         width: 105px;
     }
-
-
     .footer__lastsection {
         font-size: 20px;
     }
