--- a/estructura de archivos/views/index.html
+++ b/estructura de archivos/views/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="/css/index.css" rel="stylesheet" />
     <link href="/css/header.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/glider.css">
 </head>
 
@@ -253,6 +254,29 @@
         </div>
     </main>
     <footer>
+        <div class="footer--logo">
+            <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
+        </div>
+        <section class="footer__formas-de-pago">
+            <a href="https://www.visa.com.ar"><img src="/images/Visa.png" alt="Visa"></a>
+            <a href="https://www.mastercard.com.ar/es-ar.html"><img src="/images/Mastercard.png" alt="Mastercard"></a>
+            <a href="https://www.americanexpress.com/es-ar/"><img src="/images/American express.png" alt="American Express"></a>
+            <a href="https://www.naranjax.com"><img src="/images/Naranja.png" alt="Naranja"></a>
+            <a href="https://www.mercadopago.com.ar/home"><img src="/images/mercadopago.jpg" alt="Mercadopago"></a>
+            <a href="https://www.nativanacion.com.ar"><img src="/images/Nativa.jpg" alt="Nativa"></a>
+            <a href="https://www.redlink.com.ar"><img src="/images/Red Link.png" alt="Red Link"></a>
+        </section>
+        <section class="footer__lastsection">
+            <nav class="footer__lastsection__navbar">
+                <ul>
+                    <li>Sobre nosotros</li>
+                    <li>Contactanos</li>
+                    <li>Politicas de privacidad</li>
+                    <li>Ayuda</li>
+                </ul>
+            </nav>
+            <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
+        </section>
     </footer>
     <script src="https://kit.fontawesome.com/ae7c764a16.js " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js " integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk " crossorigin="anonymous "></script>
