--- a/estructura de archivos/views/index.html
+++ b/estructura de archivos/views/index.html
@@ -125,6 +125,44 @@
             </article>
         </section>
         <div class="main-content-buttom "><button class="main-display-button ">Ver más</button></div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/images/white-background-2-768x450.jpg" class="d-block w-100" alt="">
+                    <div class="carousel-caption d-none d-md-block main--carousel-p-color">
+                        <h5>Cliente+</h5>
+                        <p>Beneficios increibles con Cliente+.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/images/white-background-2-768x450.jpg" class="d-block w-100" alt="">
+                    <div class="carousel-caption d-none d-md-block main--carousel-p-color">
+                        <h5>Partnership</h5>
+                        <p>Convierte en socio de DALF-Store.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/images/white-background-2-768x450.jpg" class="d-block w-100" alt="">
+                    <div class="carousel-caption d-none d-md-block main--carousel-p-color">
+                        <h5>Merchandising</h5>
+                        <p>Compra productos unicos de la pagina. <i class="fa-solid fa-heart"></i> </p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon main-carousel-button" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon main-carousel-button" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         <h2>Juegos Recomendados Digitales</h2>
         <section class="main__section--product ">
             <article class="main__section--product-article ">
