--- a/estructura de archivos/public/css/cart.css
+++ b/estructura de archivos/public/css/cart.css
@@ -1,14 +1,20 @@
 /*general*/
 body{
     background-color: #36393f;
-    color: #dee2e6;
+    color: #dee2e6; 
 }
 /*****************header****************/
 /******************body*****************/
-/**carrito**/
+/**cart**/
 .carrito__main{
     display: flex;
     flex-wrap: wrap;
+}
+.articulos{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 95%;
 }
 .carrito__main__section--productos{
     display: flex;
@@ -19,8 +25,8 @@ body{
     font-size: 10px;
 }
 .carrito__main__section--pruductos-title{
-    width: 100%;
-    font-size: 15px;
+    width: 95%;
+    font-size: 18px;
     margin-bottom: 0;
 }
 .linea{
@@ -33,35 +39,41 @@ body{
     width: 100%;
 }
 .linea hr{
-    width: 100%;
+    width: 95%;
 }
 .carrito__main__section--productos article{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-around;
     height: 100px;
-    width: 95%;
+    width: 100%;
 }
 .carrito__main__section--productos article img{
-    width: 20%;
+    width: 60px;
+    height: 95%;
     margin-right: 10px;
 }
 .carrito__main__section--productos article div{
     display: flex;
-    flex-wrap:wrap ;
+    flex-wrap: wrap;
+    flex-grow: 1;
     width: 75%;
     justify-content: end;
 }
-.delete-product{
+.delete-product{ 
     width: 50px;
+    height: 21.35px;
     margin: 0 5px;
     background-color:#0d6efd ;
     color: #dee2e6;
     border:none;
     border-radius: 10%;
+    padding: 3px;
 }
 .contador-resta, .contador-valor, .contador-suma {
     width: 23px;
+    height: 21.35px;
     margin: 0 -2px 0 0;
     border:none;
     border-radius: 10%;
@@ -78,28 +90,70 @@ body{
 }
 .precio{
     background-color:#36393f;
+    height: 21.35px;
     border:none;
     color:#dee2e6;
+}
+/*cart adress*/
+.carrito__main__section--productos form {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 95%;
+    justify-content: space-between;
+    gap: 10px;
+    margin: 10px 0;
+}
+.carrito__main__section--productos form input{
+    height: 10px; 
+    border-radius: 10px;
+    border:none;
+    padding: 3px;
+}
+#chico{
+    width: 30%;
+}
+#medio{
+    width: 45%;
+}
+#entero{
+    width: 100%;
+}
+/*cart pay*/
+.expira{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.expira p{
+    width: 100%;
+    font-size: 12px;
+}
+#bitsecured{
+    width: 30%;
+    text-align: center;
+    margin: 0;
 }
 /**total**/
 .total{
     width: 80%;
-    height: 250px;
-    border: 1px solid ;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
-    align-content: space-around;
-    gap: 15px;
+    align-items: center;
+    justify-content: center;
+    gap: 13px;
     padding-top: 10px;
+    margin-top: 10px;
     background-color: #212529;
     border:solid 1px #2b2d32;
 }
 .total div{
     display: flex;
     flex-wrap: wrap;
+    width: 80%;
 }
-.total-productos, .total-envio, .total-total, .total img{
+.total-productos, .total-envio, .total-total{
     width: 80%;
     margin: 0;
 }
@@ -116,28 +170,88 @@ body{
     text-align: center;
     margin-top: 30px;
 }
+.total img{
+    height: 30%;
+    width: 80%;
+}
 .total-comprar{
     display: flex;
     justify-content: center;
+    padding: 5px;
+}
+.total a{
+    color: #dee2e6;
+    text-decoration: none;
 }
 .total-comprar button{
-    width: 130px;
+    width: 60%;
     height: 30px;
     background-color:#0d6efd ;
-    color: #dee2e6;
     border-radius: 10%;
     border:none;
 }
 /**productos recomedados**/
-.productos-recomendados{
-    display: flex;
-    justify-content: space-around;
-}
-.productos-recomendados a {
-    width: 30%;
-}
-.productos-recomendados a img{
+.carrito__main__section--pruductos-recomendados{
     width: 100%;
 }
+.productos-recomendados{
+    width: 100%;
+    background-color: #0d6efd;
+    margin: 0 auto;
+}
 
+/*.glider a img{
+    width: 100%;
+}*/
 /*****************footer*****************/
+/*media queries*/
+@media(min-width:768px){
+    .total{
+        width: 60%;
+        height: 400px;
+    }
+}
+@media(min-width:1024px){
+    .carrito__main__section--productos{
+        justify-content: space-around;
+    }
+    .carrito__main__section--productos form{
+        width: 60%;
+        align-content: flex-start;
+    }
+    .carrito__main__section--productos article{
+        height: 150px;
+        width:100%;
+    }
+    .carrito__main__section--productos article img{
+        width: auto;
+        height: 95%;
+    }
+    .carrito__main__section--productos article div{
+        height: 80%;
+    }
+    .articulos{
+        width: 60%;
+    }
+    .total{
+        width: 30%;
+        height: 350px;
+    }
+    .carrito__main__section--pruductos-recomendados{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content:center;
+    }
+    .productos-recomendados{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content:center;
+        width: 95%;
+        
+    }
+    .productos-recomendados a {
+        width: 20%;
+    }
+}
