--- a/estructura de archivos/public/css/general.css
+++ b/estructura de archivos/public/css/general.css
@@ -3,5 +3,5 @@
     --C_Grey_Dark: #36393f;
     --C_Light_Dark: #212529;
     --C_Blue: #0d6efd;
-    --C_Discord: #3d47a0
+    --C_Discord: #3d47a0;
 }
