--- a/estructura de archivos/views/cart.html
+++ b/estructura de archivos/views/cart.html
@@ -85,6 +85,12 @@
                       <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
                       <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
                       <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
+                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
+                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
+                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
+                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
+                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
+                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
                     </div>
                   
                     <button aria-label="Previous" class="glider-prev">«</button>
@@ -102,13 +108,36 @@
     <script>
         window.addEventListener('load', function(){
   new Glider(document.querySelector('.glider'), {
-    slidesToShow: 1,
+    slidesToShow: 2,
     slidesToScroll:1,
+    itemWith:150,
     dots: '#dots',
     arrows: {
         prev: '.glider-prev',
         next: '.glider-next'
+    },
+    responsive: [
+    {
+      // screens greater than >= 768px
+      breakpoint: 768,
+      settings: {
+        // Set to `auto` and provide item width to adjust to viewport
+        slidesToShow: 3,
+        slidesToScroll: 1,
+        itemWidth: 150,
+        duration: 0.25
+      }
+    },{
+      // screens greater than >= 1024px
+      breakpoint: 1024,
+      settings: {
+        slidesToShow: 5,
+        slidesToScroll: 1,
+        itemWidth: 150,
+        duration: 0.25
+      }
     }
+  ]
   })
 })
     </script>
