--- a/estructura de archivos/views/index.html
+++ b/estructura de archivos/views/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DALF-Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="/css/styles.css" rel="stylesheet" />
     <link href="/css/index.css" rel="stylesheet" />
     <link href="/css/header.css" rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
@@ -210,6 +211,7 @@
                 </div>
             </article>
         </section>
+
         <div class="main-content-buttom "><button class="main-display-button ">Ver más</button></div>
         <h2>Producto de nuestros usuarios</h2>
         <section class="main__section--product ">
