--- a/estructura de archivos/views/cart.html
+++ b/estructura de archivos/views/cart.html
@@ -14,7 +14,7 @@
     </header> 
     <main class="carrito__main">
         <section class="carrito__main__section--productos">
-            <h2 class="carrito__main__section--pruductos-title">Tu carrito</h2>
+            <p class="carrito__main__section--pruductos-title">Tu carrito</p>
             <div class="linea"><hr></div>
             <div class="articulos">
                 <article>
@@ -76,7 +76,7 @@
             </div>
         </section>
         <section class="carrito__main__section--pruductos-recomendados">
-            <h2 class="carrito__main__section--pruductos-title">Productos que pueden interesarte</h2>
+            <p class="carrito__main__section--pruductos-title">Productos que pueden interesarte</p>
             <div class="linea"><hr></div>
             <article class="productos-recomendados">
                 <div class="glider-contain">
