--- a/estructura de archivos/views/cartPay.html
+++ b/estructura de archivos/views/cartPay.html
@@ -10,8 +10,27 @@
     <link rel="stylesheet" type="text/css" href="/css/glider.css">
 </head>
 <body class="carrito">
-    <header>
-    </header> 
+    <header id="top">
+        <div class="header__top--general">
+            <button id="burger"><i class="fa-solid fa-bars"></i></button>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Juegos</a></li>
+                    <li><a href="#">Tarjetas de Regalo</a></li>
+                    <li><a href="#">Xbox</a></li>
+                    <li><a href="#">Software</a></li>
+                    <li><a href="#">Español Latinoamericano | ARS</a></li>
+                </ul>
+            </nav>
+            <a class="header--figure-logo" href="/index"><img src="/images/logo2.png" alt=""></a>
+            <div class="header__top--general-navigation_button">
+                <button><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></button>
+                <button><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></button>
+                <button><a href="/login"><i class="fa-solid fa-user"></i></a></button>
+            </div>
+        </div>
+    </header>
     <main class="carrito__main">
         <section class="carrito__main__section--productos">
             <p class="carrito__main__section--pruductos-title">Metodos de pago</p>
